--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,8 +1,6 @@
 <div class="container mt-5">
     <div *ngIf="!registerMode" style='text-align: center;'>
-        <h1> Talk with your peers</h1>
-        <h1> Test line 1 </h1>
-        <h1> Test line 2</h1>
+        <h1> Talk with your peers and meet new people</h1>
         <p class="=lead"> Come to have a chat... all you need to do is sign up!</p>
         <div class="text-center">
             <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2"> Register </button>
